tests/spec/emit/snapshots/generic_adapter_pointer_map_key_stays_unconstrained.snap
---
source: tests/spec/emit/types.rs
description: |
  
  struct Thing { v: int }
  
  interface Box<U> {
    fn get() -> U
  }
  
  struct Bar<S> {
    m: S,
  }
  
  impl<S> Bar<S> {
    fn get(self) -> Option<S> {
      Some(self.m)
    }
  }
  
  fn consume<T>(box: Box<Option<Map<Ref<T>, int>>>) {
    if let Some(v) = box.get() {
      let _ = v
    }
  }
  
  fn pass<T>(b: Bar<Map<Ref<T>, int>>) {
    consume(b)
  }
  
  fn main() {
    let m: Map<Ref<Thing>, int> = Map.new()
    pass(Bar { m: m })
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

type Thing struct {
	v int
}

type Box[U any] interface {
	get() U
}

type Bar[S any] struct {
	m S
}

func (b Bar[S]) get() (S, bool) {
	return b.m, true
}

func consume[T any](box Box[lisette.Option[map[*T]int]]) {
	subject := box.get()
	if subject.Tag == lisette.OptionSome {
		_ = subject.SomeVal
	}
}

func pass[T any](b Bar[map[*T]int]) {
	consume(_lisAdapter_Bar_Box_0[T]{inner: b})
}

func main() {
	m := make(map[*Thing]int)
	pass(Bar[map[*Thing]int]{m: m})
}

type _lisAdapter_Bar_Box_0[T any] struct {
	inner Bar[map[*T]int]
}

func (a _lisAdapter_Bar_Box_0[T]) get() lisette.Option[map[*T]int] {
	ret, ret_1 := a.inner.get()
	if ret_1 && ret != nil {
		return lisette.MakeOptionSome[map[*T]int](ret)
	}
	return lisette.MakeOptionNone[map[*T]int]()
}
