tests/spec/emit/snapshots/generic_adapter_preserves_nested_parameter_constraint.snap
---
source: tests/spec/emit/types.rs
description: |
  
  interface Box<U> {
    fn get() -> U
  }
  
  struct Bar<S> {
    m: S,
  }
  
  impl<S> Bar<S> {
    fn get(self) -> Option<S> {
      Some(self.m)
    }
  }
  
  fn consume<K: Comparable, V>(box: Box<Option<Map<K, V>>>) {
    if let Some(v) = box.get() {
      let _ = v
    }
  }
  
  fn pass<K: Comparable, V>(b: Bar<Map<K, V>>) {
    consume(b)
  }
  
  fn main() {
    pass(Bar { m: Map.from([("a", 1)]) })
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

type Box[U any] interface {
	get() U
}

type Bar[S any] struct {
	m S
}

func (b Bar[S]) get() (S, bool) {
	return b.m, true
}

func consume[K comparable, V any](box Box[lisette.Option[map[K]V]]) {
	subject := box.get()
	if subject.Tag == lisette.OptionSome {
		_ = subject.SomeVal
	}
}

func pass[K comparable, V any](b Bar[map[K]V]) {
	consume(_lisAdapter_Bar_Box_0[K, V]{inner: b})
}

func main() {
	pass(Bar[map[string]int]{m: map[string]int{"a": 1}})
}

type _lisAdapter_Bar_Box_0[K comparable, V any] struct {
	inner Bar[map[K]V]
}

func (a _lisAdapter_Bar_Box_0[K, V]) get() lisette.Option[map[K]V] {
	ret, ret_1 := a.inner.get()
	if ret_1 && ret != nil {
		return lisette.MakeOptionSome[map[K]V](ret)
	}
	return lisette.MakeOptionNone[map[K]V]()
}
