tests/spec/emit/snapshots/generic_adapter_uses_separate_caller_contexts.snap
---
source: tests/spec/emit/types.rs
description: |
  
  interface Box<U> {
    fn get() -> U
  }
  
  struct Bar<T> {
    x: Option<T>,
  }
  
  impl<T> Bar<T> {
    fn get(self) -> Option<T> {
      self.x
    }
  }
  
  fn consume<T>(box: Box<Option<T>>) {
    if let Some(v) = box.get() {
      let _ = v
    }
  }
  
  fn strong<T: Comparable>(b: Bar<T>) {
    consume(b)
  }
  
  fn weak<T>(b: Bar<T>) {
    consume(b)
  }
  
  fn main() {
    strong(Bar { x: Some(1) })
    weak(Bar { x: Some(2) })
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

type Box[U any] interface {
	get() U
}

type Bar[T any] struct {
	x lisette.Option[T]
}

func (b Bar[T]) get() (T, bool) {
	v := b.x
	if v.Tag == lisette.OptionSome {
		return v.SomeVal, true
	}
	return *new(T), false
}

func consume[T any](box Box[lisette.Option[T]]) {
	subject := box.get()
	if subject.Tag == lisette.OptionSome {
		_ = subject.SomeVal
	}
}

func strong[T comparable](b Bar[T]) {
	consume(_lisAdapter_Bar_Box_0[T]{inner: b})
}

func weak[T any](b Bar[T]) {
	consume(_lisAdapter_Bar_Box_1[T]{inner: b})
}

func main() {
	strong(Bar[int]{x: lisette.MakeOptionSome(1)})
	weak(Bar[int]{x: lisette.MakeOptionSome(2)})
}

type _lisAdapter_Bar_Box_0[T comparable] struct {
	inner Bar[T]
}

func (a _lisAdapter_Bar_Box_0[T]) get() lisette.Option[T] {
	return lisette.OptionFromCommaOk[T](a.inner.get())
}

type _lisAdapter_Bar_Box_1[T any] struct {
	inner Bar[T]
}

func (a _lisAdapter_Bar_Box_1[T]) get() lisette.Option[T] {
	return lisette.OptionFromCommaOk[T](a.inner.get())
}
