tests/spec/emit/snapshots/generic_alias_of_option_in_return_position.snap
---
source: tests/spec/emit/types.rs
description: |
  
  type Maybe<T> = Option<T>
  
  fn test() -> Maybe<int> {
    Some(42)
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

type Maybe[T any] = lisette.Option[T]

func test() (int, bool) {
	return 42, true
}
