tests/spec/emit/snapshots/generic_array_map_key_renders_comparable_bound.snap
---
source: tests/spec/emit/arrays.rs
description: |
  
  fn count<T: Comparable>(m: Map<Array<T, 2>, int>) -> int {
    m.length()
  }
---
package main

func count[T comparable](m map[[2]T]int) int {
	return len(m)
}
